--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,15 @@
+body::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: #424651;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #6f2dbd;
+}
+
 svg {
   height: 100px;
   width: 100px;
@@ -5,6 +17,8 @@ svg {
 
 main {
   margin-left: 5em;
+  margin-right: 5em;
+  max-width: 900px;
 }
 
 header {
